--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = myplugin
+name = myplugin-ui
 summary = A panel plugin for OpenStack Dashboard
 description-file =
     README.rst
